--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <head>
-  <title>OpenAI Quickstart</title>
+  <title>The Teenager Translator</title>
   <link
     rel="shortcut icon"
-    href="{{ url_for('static', filename='dog.png') }}"
+    href="{{ url_for('static', filename='angry-face-128.png') }}"
   />
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
 </head>
 
 <body>
-  <img src="{{ url_for('static', filename='dog.png') }}" class="icon" />
-  <h3>Name my pet</h3>
+  <img src="{{ url_for('static', filename='angry-face-128.png') }}" class="icon" />
+  <h3>The Teenager Translator</h3>
   <form action="/" method="post">
-    <input type="text" name="animal" placeholder="Enter an animal" required />
-    <input type="submit" value="Generate names" />
+    <input type="text" name="reply" placeholder="Enter the text to translate" required />
+    <input type="submit" value="Generate translation" />
   </form>
   {% if result %}
   <div class="result">{{ result }}</div>
